// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReply - Snapshots > matches snapshot with default props 1`] = `
<div
  data-open="false"
  data-testid="dialog"
>
  <div
    aria-label="Reply to post"
    class="w-3xl"
    data-testid="dialog-content"
  >
    <div
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Reply
      </h2>
      <p
        data-testid="dialog-description"
      >
        Reply dialog
      </p>
    </div>
    <div
      class="gap-3"
      data-testid="container"
    >
      <div
        class="rounded-md py-0"
        data-testid="card"
      >
        <div
          class="flex flex-col gap-4 p-6"
          data-testid="card-content"
        >
          <div
            data-post-id="snapshot-post-id"
            data-testid="post-header"
          >
            PostHeader 
            snapshot-post-id
          </div>
          <div
            data-post-id="snapshot-post-id"
            data-testid="post-content"
          >
            PostContent 
            snapshot-post-id
          </div>
        </div>
      </div>
      <div
        class="relative pl-6"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-post-id="snapshot-post-id"
          data-show-thread="true"
          data-testid="post-input"
          data-variant="reply"
        >
          <button
            data-testid="mock-success-btn"
          >
            Success
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogReply - Snapshots > matches snapshot with open prop 1`] = `
<div
  data-open="true"
  data-testid="dialog"
>
  <div
    aria-label="Reply to post"
    class="w-3xl"
    data-testid="dialog-content"
  >
    <div
      data-testid="dialog-header"
    >
      <h2
        data-testid="dialog-title"
      >
        Reply
      </h2>
      <p
        data-testid="dialog-description"
      >
        Reply dialog
      </p>
    </div>
    <div
      class="gap-3"
      data-testid="container"
    >
      <div
        class="rounded-md py-0"
        data-testid="card"
      >
        <div
          class="flex flex-col gap-4 p-6"
          data-testid="card-content"
        >
          <div
            data-post-id="snapshot-post-id"
            data-testid="post-header"
          >
            PostHeader 
            snapshot-post-id
          </div>
          <div
            data-post-id="snapshot-post-id"
            data-testid="post-content"
          >
            PostContent 
            snapshot-post-id
          </div>
        </div>
      </div>
      <div
        class="relative pl-6"
        data-override-defaults="true"
        data-testid="container"
      >
        <div
          data-post-id="snapshot-post-id"
          data-show-thread="true"
          data-testid="post-input"
          data-variant="reply"
        >
          <button
            data-testid="mock-success-btn"
          >
            Success
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
